--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <video autoplay loop muted>
+    <video autoplay loop controls>
         <source src="https://github.com/XAnonimoxX/99990/Video.mp4" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
     </video>
